fix scaling on mobile phone

--- a/src/assets/styles/media/homemedia.css
+++ b/src/assets/styles/media/homemedia.css
@@ -43,9 +43,13 @@
 /* 150% */
 
 @media only screen and (max-width: 1535px) {
+  .title-container {
+    font-size: 100px;
+  }
   .title-main {
     margin-top: -40px;
-    margin-left: 50px;
+    margin-left: 100px;
+    font-size: 140px;
   }
   .slide-page-img img {
     width: 250px;
@@ -78,8 +82,8 @@
 
 @media only screen and (max-width: 1279px) {
   .title-main {
-    margin-top: -50px;
-    margin-left: 50px;
+    margin-top: -35px;
+    margin-left: 100px;
   }
   .slide-page-img img {
     width: 210px;
@@ -113,16 +117,11 @@
 /* 200% */
 
 @media only screen and (max-width: 1097px) {
-  .title-main {
-    margin-top: -70px;
-    margin-left: 50px;
-  }
   .slide-page-img img {
     width: 300px;
   }
   .slide-page {
     margin-top: -130px;
-    width: 85%;
   }
   .slide-container {
     margin-left: 0px;
@@ -138,7 +137,8 @@
   }
   .slide-page-title {
     height: 120px;
-    font-size: 8vh;
+    width: 150%;
+    font-size: 50px;
   }
   .one,
   .two,
@@ -179,23 +179,18 @@
 /* 250% */
 
 @media only screen and (max-width: 959px) {
-  .slide-container {
-    margin-top: 100px;
-    margin-left: -30px;
-  }
   .burger-nav {
     left: 50%;
     width: 50%;
   }
   .title-container {
-    margin-top: 40px;
-    font-size: 20vh;
+    font-size: 110px;
     margin-left: -10px;
+    line-height: 85px;
   }
   .title-main {
-    margin-left: 150px;
-    font-size: 25vh;
-    margin-top: -40px;
+    margin-left: 230px;
+    font-size: 140px;
   }
 }
 
@@ -207,18 +202,18 @@
     width: 60%;
   }
   .logo {
-    font-size: 13vh;
-    margin-top: -5px;
+    font-size: 60px;
   }
   /**/
   .title-container {
     margin-top: 20px;
-    font-size: 20vh;
+    font-size: 90px;
     margin-left: -20px;
   }
   .title-main {
-    margin-left: 150px;
-    font-size: 25vh;
+    margin-left: 190px;
+    font-size: 120px;
+    margin-top: -45px;
   }
   .slide-page-img img {
     width: 280px;
@@ -227,41 +222,38 @@
     margin-top: -130px;
   }
   .slide-container {
-    margin-left: -60px;
+    margin-top: 150px;
+    margin-left: -50px;
     width: 100%;
     height: 60%;
   }
 
   .slide-page-title {
-    height: 80px;
-    font-size: 13vh;
+    height: 90px;
+    width: 200%;
+    font-size: 50px;
   }
 
   .home-container {
     height: 750px;
   }
 }
-/*
-.checksize {
-  background-color: aqua;
-  height: 1px;
-  display: flex;
-}
-*/
+/* 400% */
 
 @media only screen and (max-width: 639px) {
   .burger-nav {
     left: 30%;
     width: 70%;
   }
-  .logo {
-    margin-top: -12px;
-  }
-  /**/
 
+  /**/
+  .title-container {
+    margin-left: -30px;
+    line-height: 70px;
+  }
   .title-main {
-    margin-left: 100px;
-    margin-top: -80px;
+    margin-left: -1px;
+    margin-top: 15px;
   }
   .slide-page-img img {
     width: 350px;
@@ -270,14 +262,15 @@
     margin-top: -100px;
   }
   .slide-container {
+    margin-top: 240px;
     margin-left: -90px;
     width: 100%;
     height: 1100px;
   }
 
   .slide-page-title {
-    height: 160px;
-    font-size: 19vh;
+    height: 180px;
+    font-size: 51px;
   }
   .slide-container a {
     width: 40%;
@@ -287,24 +280,16 @@
   }
 }
 
-@media only screen and (max-width: 639px) {
+/* 500% */
+
+@media only screen and (max-width: 479px) {
   .burger-nav {
     left: 0%;
     width: 100%;
   }
-  .logo {
-    margin-top: -15px;
-  }
-  /**/
-  .title-container {
-    margin-left: -30px;
-  }
 
-  .title-main {
-    margin-left: 70px;
-    margin-top: -90px;
-    font-size: 30vh;
-  }
+  /**/
+
   .slide-page-img img {
     width: 330px;
   }
@@ -318,9 +303,10 @@
 
   .slide-page-title {
     height: 140px;
+    font-size: 40px;
   }
 
   .home-container {
-    height: 1300px;
+    height: 1440px;
   }
 }
